resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-api
  namespace: backend
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: emp-api
  template:
    metadata:
      labels:
        app: emp-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nodegroup-type
                operator: In
                values:
                - BACKEND
      terminationGracePeriodSeconds: 30
      containers:
        - name: emp-api
          image: 058475846659.dkr.ecr.ap-northeast-2.amazonaws.com/backend-emp:2021-05-04_17-55-52.675
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "300m"
#           livenessProbe:
#             exec:
#               command:
#               - cat
#               - /tmp/healthy
#             initialDelaySeconds: 15 #15
#             periodSeconds: 20
#             failureThreshold: 3
#             timeoutSeconds: 1
#           readinessProbe:
#             exec:
#               command:
#               - cat
#               - /tmp/healthy
#             initialDelaySeconds: 15 # 15
#             periodSeconds: 10
#             failureThreshold: 3
#             timeoutSeconds: 1
