resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-api
    service: web-api
  name: web-api
  namespace: frontend
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: web-api
