resources/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emp-virtualservice
  namespace: backend
spec:
  gateways:
  - emp-gateway
  hosts:
  - "emp.kimdragon50.ml"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: emp-api
        port:
          number: 8080
